add images smaller size

--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -292,7 +292,11 @@
               <div class="content">
                 <div class="cards">
                   <div class="card" tabindex="0">
-                    <div class="card__head"><img class="card__img" src="img/site1.png" alt="Site1 (convert PSD to HTML/CSS/JS)"></div>
+                    <div class="card__head">
+                      <picture class="card__picture">
+                        <source type="image/webp" srcset="img/content/webp/site1.webp"><img class="card__img" src="img/content/jpg/site1.jpg" alt="Site1 (convert PSD to HTML/CSS/JS)">
+                      </picture>
+                    </div>
                     <div class="card__body">
                       <ul class="card__list">
                         <li class="card__item"><a class="card__link card__link_view" href="https://maksiemens.github.io/site1"></a></li>
@@ -300,7 +304,11 @@
                     </div>
                   </div>
                   <div class="card" tabindex="0">
-                    <div class="card__head"><img class="card__img" src="img/site2.png" alt="Site2 (convert PSD to HTML/CSS/JS)"></div>
+                    <div class="card__head">
+                      <picture class="card__picture">
+                        <source type="image/webp" srcset="img/content/webp/site2.webp"><img class="card__img" src="img/content/jpg/site2.jpg" alt="Site2 (convert PSD to HTML/CSS/JS)">
+                      </picture>
+                    </div>
                     <div class="card__body">
                       <ul class="card__list">
                         <li class="card__item"><a class="card__link card__link_view" href="https://maksiemens.github.io/site2"></a></li>
@@ -308,7 +316,11 @@
                     </div>
                   </div>
                   <div class="card" tabindex="0">
-                    <div class="card__head"><img class="card__img" src="img/site3.png" alt="Site3 (convert PSD to HTML/CSS/JS)"></div>
+                    <div class="card__head">
+                      <picture class="card__picture">
+                        <source type="image/webp" srcset="img/content/webp/site3.webp"><img class="card__img" src="img/content/jpg/site3.jpg" alt="Site3 (convert PSD to HTML/CSS/JS)">
+                      </picture>
+                    </div>
                     <div class="card__body">
                       <ul class="card__list">
                         <li class="card__item"><a class="card__link card__link_view" href="https://maksiemens.github.io/site3"></a></li>
@@ -316,7 +328,11 @@
                     </div>
                   </div>
                   <div class="card" tabindex="0">
-                    <div class="card__head"><img class="card__img" src="img/site4.png" alt="Site4 (convert PSD to HTML/CSS/JS)"></div>
+                    <div class="card__head">
+                      <picture class="card__picture">
+                        <source type="image/webp" srcset="img/content/webp/site4.webp"><img class="card__img" src="img/content/jpg/site4.jpg" alt="Site4 (convert PSD to HTML/CSS/JS)">
+                      </picture>
+                    </div>
                     <div class="card__body">
                       <ul class="card__list">
                         <li class="card__item"><a class="card__link card__link_view" href="https://maksiemens.github.io/site4"></a></li>
@@ -324,7 +340,11 @@
                     </div>
                   </div>
                   <div class="card" tabindex="0">
-                    <div class="card__head"><img class="card__img" src="img/site5.png" alt="Site5 (convert PSD to HTML/CSS/JS)"></div>
+                    <div class="card__head">
+                      <picture class="card__picture">
+                        <source type="image/webp" srcset="img/content/webp/site5.webp"><img class="card__img" src="img/content/jpg/site5.jpg" alt="Site5 (convert PSD to HTML/CSS/JS)">
+                      </picture>
+                    </div>
                     <div class="card__body">
                       <ul class="card__list">
                         <li class="card__item"><a class="card__link card__link_view" href="https://maksiemens.github.io/site5"></a></li>
@@ -332,7 +352,11 @@
                     </div>
                   </div>
                   <div class="card" tabindex="0">
-                    <div class="card__head"><img class="card__img" src="img/site6.png" alt="Site6 (convert PSD to HTML/CSS/JS)"></div>
+                    <div class="card__head">
+                      <picture class="card__picture">
+                        <source type="image/webp" srcset="img/content/webp/site6.webp"><img class="card__img" src="img/content/webp/site6.jpg" alt="Site6 (convert PSD to HTML/CSS/JS)">
+                      </picture>
+                    </div>
                     <div class="card__body">
                       <ul class="card__list">
                         <li class="card__item"><a class="card__link card__link_view" href="https://maksiemens.github.io/site6"></a></li>
@@ -340,7 +364,11 @@
                     </div>
                   </div>
                   <div class="card" tabindex="0">
-                    <div class="card__head"><img class="card__img" src="img/site7.png" alt="Site7 (convert PSD to HTML/CSS/JS)"></div>
+                    <div class="card__head">
+                      <picture class="card__picture">
+                        <source type="image/webp" srcset="img/content/webp/site7.webp"><img class="card__img" src="img/content/webp/site7.jpg" alt="Site7 (convert PSD to HTML/CSS/JS)">
+                      </picture>
+                    </div>
                     <div class="card__body">
                       <ul class="card__list">
                         <li class="card__item"><a class="card__link card__link_view" href="https://maksiemens.github.io/site7"></a></li>
@@ -348,7 +376,11 @@
                     </div>
                   </div>
                   <div class="card" tabindex="0">
-                    <div class="card__head"><img class="card__img" src="img/site8.png" alt="Site8 (convert PSD to HTML/CSS/JS)"></div>
+                    <div class="card__head">
+                      <picture class="card__picture">
+                        <source type="image/webp" srcset="img/content/webp/site_empty.webp"><img class="card__img" src="img/content/jpg/site_empty.jpg" alt="Site8 (convert PSD to HTML/CSS/JS)">
+                      </picture>
+                    </div>
                     <div class="card__body">
                       <ul class="card__list">
                         <li class="card__item"><a class="card__link card__link_view" href="https://maksiemens.github.io/site8"></a></li>
@@ -356,10 +388,14 @@
                     </div>
                   </div>
                   <div class="card" tabindex="0">
-                    <div class="card__head"><img class="card__img" src="img/site8.png" alt="Site8 (convert PSD to HTML/CSS/JS)"></div>
+                    <div class="card__head">
+                      <picture class="card__picture">
+                        <source type="image/webp" srcset="img/content/webp/site_empty.webp"><img class="card__img" src="img/content/jpg/site_empty.jpg" alt="Site9 (convert PSD to HTML/CSS/JS)">
+                      </picture>
+                    </div>
                     <div class="card__body">
                       <ul class="card__list">
-                        <li class="card__item"><a class="card__link card__link_view" href="https://maksiemens.github.io/site8"></a></li>
+                        <li class="card__item"><a class="card__link card__link_view" href="https://maksiemens.github.io/site9"></a></li>
                       </ul>
                     </div>
                   </div>
